@@ -9,6 +9,7 @@ git-annex (3.20120407) UNRELEASED; urgency=low
     dependency on the haskell edit-distance library.
   * Renamed diskfree.c to avoid OSX case insensativity bug.
   * cabal now installs git-annex-shell as a symlink to git-annex.
+  * cabal file now autodetects whether S3 support is available.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 08 Apr 2012 12:23:42 -0400
 
